crates/php-parser/tests/snapshots/nikic_expr_tests__nikic_expr_listreferences.snap
---
source: crates/php-parser/tests/nikic_expr_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Variable": "v"
                        },
                        "span": {
                          "start": 13,
                          "end": 15
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 12,
                        "end": 15
                      }
                    }
                  ]
                },
                "span": {
                  "start": 7,
                  "end": 16
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 19,
                  "end": 21
                }
              }
            }
          },
          "span": {
            "start": 7,
            "end": 21
          }
        }
      },
      "span": {
        "start": 7,
        "end": 23
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Array": [
                    {
                      "key": {
                        "kind": {
                          "String": "k"
                        },
                        "span": {
                          "start": 28,
                          "end": 31
                        }
                      },
                      "value": {
                        "kind": {
                          "Variable": "v"
                        },
                        "span": {
                          "start": 36,
                          "end": 38
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 28,
                        "end": 38
                      }
                    }
                  ]
                },
                "span": {
                  "start": 23,
                  "end": 39
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 42,
                  "end": 44
                }
              }
            }
          },
          "span": {
            "start": 23,
            "end": 44
          }
        }
      },
      "span": {
        "start": 23,
        "end": 46
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Variable": "v"
                        },
                        "span": {
                          "start": 48,
                          "end": 50
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 47,
                        "end": 50
                      }
                    }
                  ]
                },
                "span": {
                  "start": 46,
                  "end": 51
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 54,
                  "end": 56
                }
              }
            }
          },
          "span": {
            "start": 46,
            "end": 56
          }
        }
      },
      "span": {
        "start": 46,
        "end": 58
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Array": [
                    {
                      "key": {
                        "kind": {
                          "String": "k"
                        },
                        "span": {
                          "start": 59,
                          "end": 62
                        }
                      },
                      "value": {
                        "kind": {
                          "Variable": "v"
                        },
                        "span": {
                          "start": 67,
                          "end": 69
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 59,
                        "end": 69
                      }
                    }
                  ]
                },
                "span": {
                  "start": 58,
                  "end": 70
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 73,
                  "end": 75
                }
              }
            }
          },
          "span": {
            "start": 58,
            "end": 75
          }
        }
      },
      "span": {
        "start": 58,
        "end": 76
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 76
  }
}
